--- a/Grit Management System.csproj
+++ b/Grit Management System.csproj
@@ -172,7 +172,10 @@
     <Content Include="dashboard.aspx" />
     <Content Include="gritters.aspx" />
     <Content Include="login.aspx" />
+    <Content Include="notification.aspx" />
     <Content Include="sign_up.aspx" />
+    <Content Include="upload.aspx" />
+    <Content Include="users_view.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +200,13 @@
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="notification.aspx.cs">
+      <DependentUpon>notification.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="notification.aspx.designer.cs">
+      <DependentUpon>notification.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sign_up.aspx.cs">
       <DependentUpon>sign_up.aspx</DependentUpon>
@@ -211,6 +221,20 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="upload.aspx.cs">
+      <DependentUpon>upload.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="upload.aspx.designer.cs">
+      <DependentUpon>upload.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="users_view.aspx.cs">
+      <DependentUpon>users_view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="users_view.aspx.designer.cs">
+      <DependentUpon>users_view.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
