--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+	  
+  <add name="con" connectionString="Data Source=DESKTOP-96TI2OK;initial Catalog=Grit_Management_DB;Integrated Security=true" />
+  <add name="Grit_Management_DBConnectionString" connectionString="Data Source=DESKTOP-96TI2OK;Initial Catalog=Grit_Management_DB;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+		
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
