--- a/Grit Management System.csproj
+++ b/Grit Management System.csproj
@@ -174,6 +174,7 @@
     <Content Include="dashboard.aspx" />
     <Content Include="gritters.aspx" />
     <Content Include="login.aspx" />
+    <Content Include="marks.aspx" />
     <Content Include="notification.aspx" />
     <Content Include="sign_up.aspx" />
     <Content Include="upload.aspx" />
@@ -201,6 +202,13 @@
     </Compile>
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="marks.aspx.cs">
+      <DependentUpon>marks.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="marks.aspx.designer.cs">
+      <DependentUpon>marks.aspx</DependentUpon>
     </Compile>
     <Compile Include="notification.aspx.cs">
       <DependentUpon>notification.aspx</DependentUpon>
